--- a/blocks/content/__card-link/content__card-link.css
+++ b/blocks/content/__card-link/content__card-link.css
@@ -1,7 +1,7 @@
 .content__card-link {
   display: block;
-  margin: 2px;
-  padding: 2px;
+  padding-inline: 2px;
+  padding-block: 2px;
   color: #fff;
   text-decoration: none;
 }
@@ -21,4 +21,5 @@
 
 .content__card-link:active {
   outline: none;
+  background: #545050;
 }
