--- a/blocks/content/__video-card-description/content__video-card-description.css
+++ b/blocks/content/__video-card-description/content__video-card-description.css
@@ -1,8 +1,8 @@
 .content__video-card-description {
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  font-style: normal;
+  overflow: hidden;
   line-height: 16.2px; /* 90% */
+  max-block-size: 65px;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
