--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,14 +1,15 @@
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-inline: auto;
+  margin-block: auto;
+  padding-inline: 30px;
+  padding-block: 133px;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 133px 30px;
+  inline-size: 1200px;
+  block-size: 100%;
 }
