--- a/blocks/search-form/__pseudo-checkbox/search-form__pseudo-checkbox.css
+++ b/blocks/search-form/__pseudo-checkbox/search-form__pseudo-checkbox.css
@@ -1,14 +1,18 @@
 .search-form__pseudo-checkbox {
-  position: relative;
-  border: 1px solid #fff;
+  border-inline: 1px solid #fff;
+  border-block: 1px solid #fff;
+  padding-inline: 1px;
+  padding-block: 1px;
   cursor: pointer;
   inline-size: 19px;
   block-size: 19px;
 }
 
-.search-form__pseudo-checkbox:active::before {
+.search-form__pseudo-checkbox:active::before,
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
   content: '';
-  position: absolute;
-  inset: 1px;
+  display: block;
   background-color: #fff;
+  inline-size: 100%;
+  block-size: 100%;
 }
