--- a/blocks/search-form/__textfield/search-form__textfield.css
+++ b/blocks/search-form/__textfield/search-form__textfield.css
@@ -1,9 +1,14 @@
 .search-form__textfield {
-  border: 1px solid currentColor;
-  border-inline-start-color: transparent;
-  border-inline-end-color: transparent;
-  padding: 0;
+  border-inline: 1px solid transparent;
+  border-block: 1px solid currentColor;
+  padding-inline: 0;
+  padding-block: 0;
   color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: normal;
   background-color: transparent;
   appearance: none;
   inline-size: 225px;
@@ -12,15 +17,10 @@
 
 .search-form__textfield::placeholder {
   color: rgba(255, 255, 255, 0.70);
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  font-style: normal;
-  line-height: normal;
 }
 
 .search-form__textfield:active {
-  border-inline-start-color : #fff;
+  border-inline-start-color: #fff;
   border-inline-end-color: #fff;
 }
 
