--- a/blocks/square/square.css
+++ b/blocks/square/square.css
@@ -1,10 +1,10 @@
 .preloader-chasing-squares .square {
   display: inline-block;
-  width: 15px;
-  height: 15px;
   opacity: 1;
   background: #fff;
   animation: focusfade 2.8s infinite;
+  inline-size: 15px;
+  block-size: 15px;
 }
 
 .preloader-chasing-squares .square:nth-child(2) {
