--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,8 +18,10 @@ ol,
 li,
 blockquote,
 fieldset {
-  margin: 0;
-  padding: 0;
+  margin-inline: 0;
+  margin-block: 0;
+  padding-inline: 0;
+  padding-block: 0;
 }
 
 ul,
