--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 @import url(../fonts/fonts.css);
-@import url(./style.css);
+@import url(./globals.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/title/title.css);
 @import url(../blocks/visually-hidden/visually-hidden.css);
